Compilador.java
package Prueba;

import java.io.FileNotFoundException;
import java.io.FileReader;

/* Generated By:JavaCC: Do not edit this line. Compilador.java */
class Compilador implements CompiladorConstants {

        public static void main(String [] Args) throws ParseException, FileNotFoundException
        {


                        try
                        {

                        	 Compilador c = new Compilador(new FileReader("C:\\Users\\alber\\Desktop\\Prueba\\Prueba\\src\\CodigoHU04.txt"));
                  			 c.Clase();
                              AnalizadorSemantico as = new AnalizadorSemantico("C:\\Users\\alber\\Desktop\\Prueba\\Prueba\\src\\CodigoHU04.txt");
                              System.out.println();
                              System.out.println("Éxito.");

                        }
                        catch(ParseException e)
                        {

                                System.out.println(e.getMessage());
                                System.out.println("Error.");

                        }

        }

  static final public void Clase() throws ParseException {
    jj_consume_token(Clase);
    Identificador();
    jj_consume_token(LlaveIzquierda);
    label_1:
    while (true) {
      if (jj_2_1(5)) {
        ;
      } else {
        break label_1;
      }
      Declaracion();
    }
    label_2:
    while (true) {
      if (jj_2_2(5)) {
        ;
      } else {
        break label_2;
      }
      Metodo();
    }
    jj_consume_token(LlaveDerecha);
    jj_consume_token(0);
  }

  static final public void Declaracion() throws ParseException {
    if (jj_2_5(5)) {
      if (jj_2_3(5)) {
        Tipo();
      } else {
        ;
      }
      Identificador();
      jj_consume_token(Asignacion);
      Expresion();
      jj_consume_token(PuntoComa);
    } else if (jj_2_6(5)) {
      Tipo();
      Identificador();
      if (jj_2_4(5)) {
        jj_consume_token(Asignacion);
        Expresion();
      } else {
        ;
      }
      jj_consume_token(PuntoComa);
    } else if (jj_2_7(5)) {
      Identificador();
      jj_consume_token(Asignacion);
      jj_consume_token(PuntoComa);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Tipo() throws ParseException {
    if (jj_2_8(5)) {
      jj_consume_token(Booleano);
    } else if (jj_2_9(5)) {
      jj_consume_token(Entero);
    } else if (jj_2_10(5)) {
      Identificador();
    } else if (jj_2_11(5)) {
      jj_consume_token(Void);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Metodo() throws ParseException {
    jj_consume_token(Publico);
    Tipo();
    Identificador();
    jj_consume_token(ParentesisIzquierdo);
    if (jj_2_13(5)) {
      Tipo();
      Identificador();
      label_3:
      while (true) {
        if (jj_2_12(5)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(Coma);
        Tipo();
        Identificador();
      }
    } else {
      ;
    }
    jj_consume_token(ParentesisDerecho);
    jj_consume_token(LlaveIzquierda);
    label_4:
    while (true) {
      if (jj_2_14(5)) {
        ;
      } else {
        break label_4;
      }
      Declaracion();
    }
    label_5:
    while (true) {
      if (jj_2_15(5)) {
        ;
      } else {
        break label_5;
      }
      Sentencia();
    }
    if (jj_2_16(5)) {
      jj_consume_token(Regresar);
      Expresion();
      jj_consume_token(PuntoComa);
    } else {
      ;
    }
    jj_consume_token(LlaveDerecha);
  }

  static final public void Sentencia() throws ParseException {
    if (jj_2_22(5)) {
      jj_consume_token(LlaveIzquierda);
      label_6:
      while (true) {
        if (jj_2_17(5)) {
          ;
        } else {
          break label_6;
        }
        Sentencia();
      }
      jj_consume_token(LlaveDerecha);
    } else if (jj_2_23(5)) {
      jj_consume_token(Si);
      jj_consume_token(ParentesisIzquierdo);
      label_7:
      while (true) {
        if (jj_2_18(5)) {
          ;
        } else {
          break label_7;
        }
        Expresion();
      }
      jj_consume_token(ParentesisDerecho);
      label_8:
      while (true) {
        if (jj_2_19(5)) {
          ;
        } else {
          break label_8;
        }
        Sentencia();
      }
      jj_consume_token(Entonces);
      Sentencia();
    } else if (jj_2_24(5)) {
      jj_consume_token(Mientras);
      jj_consume_token(ParentesisIzquierdo);
      Expresion();
      jj_consume_token(ParentesisDerecho);
      Sentencia();
    } else if (jj_2_25(5)) {
      jj_consume_token(Imprimir);
      jj_consume_token(ParentesisIzquierdo);
      Expresion();
      jj_consume_token(ParentesisDerecho);
      jj_consume_token(PuntoComa);
    } else if (jj_2_26(5)) {
      if (jj_2_20(5)) {
        Tipo();
      } else {
        ;
      }
      Identificador();
      jj_consume_token(Asignacion);
      Expresion();
      jj_consume_token(PuntoComa);
    } else if (jj_2_27(5)) {
      Tipo();
      Identificador();
      if (jj_2_21(5)) {
        jj_consume_token(Asignacion);
        Expresion();
      } else {
        ;
      }
      jj_consume_token(PuntoComa);
    } else if (jj_2_28(5)) {
      Identificador();
      jj_consume_token(Asignacion);
      jj_consume_token(PuntoComa);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Expresion() throws ParseException {
    if (jj_2_40(5)) {
      if (jj_2_29(5)) {
        jj_consume_token(Numero);
      } else if (jj_2_30(5)) {
        Identificador();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_31(5)) {
        jj_consume_token(Y);
      } else if (jj_2_32(5)) {
        jj_consume_token(MenorQue);
      } else if (jj_2_33(5)) {
        jj_consume_token(Suma);
      } else if (jj_2_34(5)) {
        jj_consume_token(Resta);
      } else if (jj_2_35(5)) {
        jj_consume_token(Multiplicacion);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      Expresion();
    } else if (jj_2_41(5)) {
      Declaracion();
    } else if (jj_2_42(5)) {
      Identificador();
      jj_consume_token(Punto);
      jj_consume_token(Longitud);
    } else if (jj_2_43(5)) {
      jj_consume_token(Este);
      jj_consume_token(Punto);
      Identificador();
      jj_consume_token(ParentesisIzquierdo);
      if (jj_2_37(5)) {
        Expresion();
        label_9:
        while (true) {
          if (jj_2_36(5)) {
            ;
          } else {
            break label_9;
          }
          jj_consume_token(Coma);
          Expresion();
        }
      } else {
        ;
      }
      jj_consume_token(ParentesisDerecho);
    } else if (jj_2_44(5)) {
      jj_consume_token(Numero);
    } else if (jj_2_45(5)) {
      jj_consume_token(Verdadero);
    } else if (jj_2_46(5)) {
      jj_consume_token(Falso);
    } else if (jj_2_47(5)) {
      Identificador();
    } else if (jj_2_48(5)) {
      jj_consume_token(Este);
    } else if (jj_2_49(5)) {
      jj_consume_token(Nuevo);
      jj_consume_token(Entero);
      jj_consume_token(CorcheteIzquierdo);
      Expresion();
      jj_consume_token(CorcheteDerecho);
    } else if (jj_2_50(5)) {
      jj_consume_token(Nuevo);
      Identificador();
      jj_consume_token(ParentesisIzquierdo);
      jj_consume_token(ParentesisDerecho);
    } else if (jj_2_51(5)) {
      jj_consume_token(Negacion);
      if (jj_2_38(5)) {
        jj_consume_token(Verdadero);
      } else if (jj_2_39(5)) {
        jj_consume_token(Falso);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_52(5)) {
      jj_consume_token(ParentesisIzquierdo);
      Expresion();
      jj_consume_token(ParentesisDerecho);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Identificador() throws ParseException {
    jj_consume_token(Identificador);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  static private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  static private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  static private boolean jj_2_50(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  static private boolean jj_2_51(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_51(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(50, xla); }
  }

  static private boolean jj_2_52(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_52(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(51, xla); }
  }

  static private boolean jj_3_30() {
    if (jj_scan_token(33)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_52() {
    if (jj_scan_token(ParentesisIzquierdo)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(ParentesisDerecho)) return true;
    return false;
  }

  static private boolean jj_3_51() {
    if (jj_scan_token(Negacion)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_38()) {
    jj_scanpos = xsp;
    if (jj_3_39()) return true;
    }
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_scan_token(Void)) return true;
    return false;
  }

  static private boolean jj_3_50() {
    if (jj_scan_token(Nuevo)) return true;
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(ParentesisIzquierdo)) return true;
    if (jj_scan_token(ParentesisDerecho)) return true;
    return false;
  }

  static private boolean jj_3_18() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_21() {
    if (jj_scan_token(Asignacion)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_49() {
    if (jj_scan_token(Nuevo)) return true;
    if (jj_scan_token(Entero)) return true;
    if (jj_scan_token(CorcheteIzquierdo)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(CorcheteDerecho)) return true;
    return false;
  }

  static private boolean jj_3_48() {
    if (jj_scan_token(Este)) return true;
    return false;
  }

  static private boolean jj_3_47() {
    if (jj_scan_token(33)) return true;
    return false;
  }

  static private boolean jj_3_46() {
    if (jj_scan_token(Falso)) return true;
    return false;
  }

  static private boolean jj_3_17() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_45() {
    if (jj_scan_token(Verdadero)) return true;
    return false;
  }

  static private boolean jj_3_29() {
    if (jj_scan_token(Numero)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_40()) {
    jj_scanpos = xsp;
    if (jj_3_41()) {
    jj_scanpos = xsp;
    if (jj_3_42()) {
    jj_scanpos = xsp;
    if (jj_3_43()) {
    jj_scanpos = xsp;
    if (jj_3_44()) {
    jj_scanpos = xsp;
    if (jj_3_45()) {
    jj_scanpos = xsp;
    if (jj_3_46()) {
    jj_scanpos = xsp;
    if (jj_3_47()) {
    jj_scanpos = xsp;
    if (jj_3_48()) {
    jj_scanpos = xsp;
    if (jj_3_49()) {
    jj_scanpos = xsp;
    if (jj_3_50()) {
    jj_scanpos = xsp;
    if (jj_3_51()) {
    jj_scanpos = xsp;
    if (jj_3_52()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_44() {
    if (jj_scan_token(Numero)) return true;
    return false;
  }

  static private boolean jj_3_40() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_29()) {
    jj_scanpos = xsp;
    if (jj_3_30()) return true;
    }
    xsp = jj_scanpos;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    }
    }
    }
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_43() {
    if (jj_scan_token(Este)) return true;
    if (jj_scan_token(Punto)) return true;
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(ParentesisIzquierdo)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_37()) jj_scanpos = xsp;
    if (jj_scan_token(ParentesisDerecho)) return true;
    return false;
  }

  static private boolean jj_3_42() {
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(Punto)) return true;
    if (jj_scan_token(Longitud)) return true;
    return false;
  }

  static private boolean jj_3_41() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_scan_token(33)) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(Asignacion)) return true;
    if (jj_scan_token(PuntoComa)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) {
    jj_scanpos = xsp;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_22() {
    if (jj_scan_token(LlaveIzquierda)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_17()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(LlaveDerecha)) return true;
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(Asignacion)) return true;
    if (jj_scan_token(PuntoComa)) return true;
    return false;
  }

  static private boolean jj_3_20() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_3R_12()) return true;
    if (jj_scan_token(33)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_21()) jj_scanpos = xsp;
    if (jj_scan_token(PuntoComa)) return true;
    return false;
  }

  static private boolean jj_3_26() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_20()) jj_scanpos = xsp;
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(Asignacion)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(PuntoComa)) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(Imprimir)) return true;
    if (jj_scan_token(ParentesisIzquierdo)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(ParentesisDerecho)) return true;
    if (jj_scan_token(PuntoComa)) return true;
    return false;
  }

  static private boolean jj_3_24() {
    if (jj_scan_token(Mientras)) return true;
    if (jj_scan_token(ParentesisIzquierdo)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(ParentesisDerecho)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_23() {
    if (jj_scan_token(Si)) return true;
    if (jj_scan_token(ParentesisIzquierdo)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_18()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(ParentesisDerecho)) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_19()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(Entonces)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_scan_token(Entero)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(Publico)) return true;
